# code-changes-summarization

./: README.md  app.py  pyproject.toml
data/: qwen_solutions.json
rag_experiments/: qwen_cross_encoder.py  train_cross_encoder_and_test.ipynb
src/: RAG.py  config.py  generate_documentation.py
test/: Extract_data_from_dataset.ipynb  Testing.ipynb  preparation_data_for_testing.py
