[tool.poetry]
name = "code-summarizer"
version = "0.1.0"
description = ""
authors = ["AleksandraSorokovikova <alexandraroze2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
